add boxes to modify

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snail</title>
 </head>
+
 <body>
- <p>hello</p>   
+    <div class="box">yap</div>
+    <div class="box">nap</div>
+    <div class="box">aap</div>
+ <p></p>   
 </body>
 </html>
