--- a/extraPage/snail.html
+++ b/extraPage/snail.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="snail.jpg" style="width:300px">
+    <img src="/images/snail.jpg" style="width:300px">
 </body>
 </html>
