--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <!-- Messy, I know. I'm trying to learn how all this works... -->
 
 <body>
-    <i class="fa-solid fa-droplet fa-4x"></i>
-<h1 title="I raised it from a wee baby.">That's my Snail</h1>
+    
+<h1 class="toptitle" title="I raised it from a wee baby.">That's my Snail</h1>
     <hr>    
 <pre>It sure is, <del>a</del><ins>n</ins><del>d</del> w<mark>ha</mark>t a 
 <b>looker!</b></pre>
@@ -32,19 +32,21 @@
     <div style="border:5px solid magenta"class="box">Box 1</div>
     <div style="border:5px solid aqua" class="box">Box 2</div>
     <div class="box">Box 3</div>
- <img src="/images/snail.jpg" style="width:354px;height:449px;" alt="a snail" usemap="#snail" title="That's my snail right there">
+ <img class="purplesnail" src="/images/snail.jpg" style="width:354px;height:449px;" alt="a snail" usemap="#snail" title="That's my snail right there">
  <map name="#snail">
     <area shape="rect" title="Click here to go to Google.com" coords="50,50,150,150" alt="a box that links to google" href="https://www.google.com/" target="_blank">
     <area shape="circle" title="Click here to go to Yahoo.com" coords="300,300,50" alt="a circle that links to yahoo" href="https://www.yahoo.com/" onclick="hello()" target="_blank">
- </map>  
+ </map>
+</img>  
  <hr>
- <p>
+ 
  <button id="uselessButton">A button with no use</button>
  some more text
+ <div class="twosnails">
+ <div class="twosnailstext">test test test</div>
  <a href="https://duckduckgo.com/?va=b&t=hc" title="Click to go to DuckDuckGo.com" target="_blank">
  <img src="/images/snail2.jpg" style="width:213px;height:158px;" alt="2 snails"></a>
-This is some random text to help me get my bearings 
-</p>
+</div>
 <hr>
     <picture>
         <source srcset="/images/snailunderleaf.jpg" media="(max-width: 800px)">
@@ -80,7 +82,18 @@ This is some random text to help me get my bearings
     <li>Snailen</li>
     <li>Snailet</li>
 </ul>
-
+<hr>
+<div id="overflow">
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+    here's some text about snails repeated over and over again
+</div>
 <script>
     hello = () => {
         alert("Cool place to click, huh?");
