--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
     <li>Snailet</li>
 </ul>
 <hr>
+<div class="dropdown">
+    <button class="dropbtn">Snail?</button>
+    <div class="dropchoices">
+        <a href="/extraPage/snail.html" target="_blank">Snail?</a>
+        <a href="/extraPage/snail.html" target="_blank">Snail!</a>
+        <a href="/extraPage/snail.html" target="_blank">Snail.</a>
+    </div>
+</div>
+<hr>
 <div id="overflow">
     here's some text about snails repeated over and over again
     here's some text about snails repeated over and over again
