--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
     </div>
 </div>
 <hr>
+<div id="droppic">
+    <img src="/images/shrimponsnail.jpg" alt="shrimpsurfing" id="surfing" width= "100">
+    <div id="droppiccontent">
+        <img src="/images/shrimponsnail.jpg" width="300">
+        <div id="surfingdesc">Shrimp surfing on Snail</div>
+    </div>
+</div>
+<hr>
 <div id="overflow">
     here's some text about snails repeated over and over again
     here's some text about snails repeated over and over again
