--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
     </div>
 </div>
 <hr>
+<div class="snailbox">
+<ul class="bigsnail">
+    <li class="lilsnail">This</li>
+    <li class="lilsnail">is</li>
+    <li class="lilsnail">a</li>
+    <li class="lilsnail">test</li>
+</ul>
+</div>
+<hr>
 <ul class="snaillist">
     <li><a href="/extraPage/snail.html" target="_blank" id="snailhome">Snail Home</a></li>
     <li><a href="/extraPage/snail.html" target="_blank">Snail Pics</a></li>
