--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
 </ul>
 </div>
 <hr>
+<button class="buttonsnail">
+    <span>Snail</span>
+</button>
+<hr>
+<img class="snailleaf "src="/images/snailunderleaf.jpg">
+<hr>
+<hr>
 <ul class="snaillist">
     <li><a href="/extraPage/snail.html" target="_blank" id="snailhome">Snail Home</a></li>
     <li><a href="/extraPage/snail.html" target="_blank">Snail Pics</a></li>
